# agent-readiness-audit

./: .agent_readiness_audit.toml  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REVIEW_INSTRUCTIONS.md  SECURITY.md  pyproject.toml
.claude/hooks/: auto-approve.sh  post-tool-use.sh  pre-commit.sh  stop.sh  validators.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gemini-pr-review-plus.yml  notify-on-failure.yml  oss-checks.yml  pii-scan-content.yml  release.yml  security.yml
agent_readiness_audit/: __init__.py  cli.py  config.py  models.py  scanner.py
agent_readiness_audit/checks/: __init__.py  agent_ergonomics.py  agentic_security.py  base.py  build_and_run.py  ci_enforcement.py  determinism_advanced.py  deterministic_setup.py  discoverability.py  documentation.py  evals.py  fast_guardrails.py  interfaces_contracts.py  observability.py  security_advanced.py  security_governance.py  static_guardrails.py  structure_discoverability.py  telemetry.py  test_feedback_loop.py  testing_validation.py  type_contracts.py  verification.py
agent_readiness_audit/reporting/: __init__.py  artifacts.py  json_report.py  markdown_report.py  table_report.py
agent_readiness_audit/utils/: __init__.py  fs.py
docs/examples/: summary.md
tests/: __init__.py  conftest.py  test_checks.py  test_checks_v3.py  test_cli.py  test_config.py  test_models_v3.py  test_reporting.py  test_scanner.py  test_v2_checks.py
