[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-readiness-audit"
version = "0.1.0"
description = "CLI tool that audits repositories for agent-readiness and outputs human + machine-readable reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agent Readiness Audit Contributors" }
]
keywords = [
    "agent",
    "audit",
    "cli",
    "developer-tools",
    "repository",
    "automation",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ara = "agent_readiness_audit.cli:app"

[project.urls]
Homepage = "https://github.com/bigdegenenergy/agent-readiness-audit"
Documentation = "https://github.com/bigdegenenergy/agent-readiness-audit#readme"
Repository = "https://github.com/bigdegenenergy/agent-readiness-audit"
Issues = "https://github.com/bigdegenenergy/agent-readiness-audit/issues"
Changelog = "https://github.com/bigdegenenergy/agent-readiness-audit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agent_readiness_audit"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["agent_readiness_audit"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002"]  # Unused arguments in tests (pytest fixtures)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["typer.*", "rich.*", "pydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["agent_readiness_audit"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
